# Db4E

./: .gitignore  COOL-UNICODE.txt  README.md  README.md-orig  RELEASE-CHECKLIST.txt  RELEASE-NOTES.txt  _config.yml  index.md  nav_bar.md  pyproject.toml  web-index.md
backups/: foo
conf/: db4e-os.sh  db4e.ini  db4e.yml  db4e_prod.yml  db4e_qa.yml  deployment.yml  reports.yml  requirements.txt
css/: db4e.tcss
csv/: mainchain-hashrate-180days.csv  mainchain-hashrate-30days.csv  mainchain-hashrate-60days.csv  mainchain-hashrate-90days.csv  mainchain-hashrate.csv  mainchain_hashrate.csv  pool-hashrate-180days.csv  pool-hashrate-30days.csv  pool-hashrate-60days.csv  pool-hashrate-90days.csv  pool-hashrate.csv  pool_hashrate.csv  pool_hashrate_30days.csv  sidechain-hashrate-180days.csv  sidechain-hashrate-30days.csv  sidechain-hashrate-60days.csv  sidechain-hashrate-90days.csv  sidechain-hashrate.csv  sidechain_hashrate.csv  sidechain_hashrate_60days.csv
data/: blocks_found.csv  blocks_found_short.csv  mainchain_hashrates.csv  mainchain_hashrates_1440days.csv  mainchain_hashrates_1440hours.csv  mainchain_hashrates_2160days.csv  mainchain_hashrates_2160hours.csv  mainchain_hashrates_30days.csv  mainchain_hashrates_60days.csv  mainchain_hashrates_720days.csv  mainchain_hashrates_720hours.csv  mainchain_hashrates_90days.csv  mainchain_hashrates_short.csv  p2pool_payouts.csv  p2pool_payouts_daily.csv  p2pool_payouts_daily_short.csv  p2pool_payouts_dev.csv  p2pool_payouts_short.csv  pool_hashrates.csv  pool_hashrates_1440days.csv  pool_hashrates_1440hours.csv  (+23 more)
db4e/: App.py  (+3 more)
(+525 files in other folders)
